feat: add Entra ID OAuth and Azure Key Vault HSM

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,12 @@ NEXT_PRIVATE_ENCRYPTION_SECONDARY_KEY="DEADBEEF"
 NEXT_PRIVATE_GOOGLE_CLIENT_ID=""
 NEXT_PRIVATE_GOOGLE_CLIENT_SECRET=""
 
+# Microsoft Entra ID (Azure AD) OAuth
+# Tenant ID can be your Azure AD tenant ID or 'common' for multi-tenant, 'organizations', or 'consumers'
+NEXT_PRIVATE_ENTRA_CLIENT_ID=""
+NEXT_PRIVATE_ENTRA_CLIENT_SECRET=""
+NEXT_PRIVATE_ENTRA_TENANT_ID="common"
+
 NEXT_PRIVATE_OIDC_WELL_KNOWN=""
 NEXT_PRIVATE_OIDC_CLIENT_ID=""
 NEXT_PRIVATE_OIDC_CLIENT_SECRET=""
@@ -31,14 +37,18 @@ NEXT_PRIVATE_DATABASE_URL="postgres://documenso:password@127.0.0.1:54320/documen
 NEXT_PRIVATE_DIRECT_DATABASE_URL="postgres://documenso:password@127.0.0.1:54320/documenso"
 
 # [[SIGNING]]
-# The transport to use for document signing. Available options: local (default) | gcloud-hsm
+# The transport to use for document signing. Available options: local (default) | gcloud-hsm | azure-hsm
 NEXT_PRIVATE_SIGNING_TRANSPORT="local"
+
+# Local Singing
 # OPTIONAL: The passphrase to use for the local file-based signing transport.
 NEXT_PRIVATE_SIGNING_PASSPHRASE=
 # OPTIONAL: The local file path to the .p12 file to use for the local signing transport.
 NEXT_PRIVATE_SIGNING_LOCAL_FILE_PATH=
 # OPTIONAL: The base64-encoded contents of the .p12 file to use for the local signing transport.
 NEXT_PRIVATE_SIGNING_LOCAL_FILE_CONTENTS=
+
+# Google Cloud HSM
 # OPTIONAL: The path to the Google Cloud HSM key to use for the gcloud-hsm signing transport.
 NEXT_PRIVATE_SIGNING_GCLOUD_HSM_KEY_PATH=
 # OPTIONAL: The path to the Google Cloud HSM public certificate file to use for the gcloud-hsm signing transport.
@@ -47,6 +57,24 @@ NEXT_PRIVATE_SIGNING_GCLOUD_HSM_PUBLIC_CRT_FILE_PATH=
 NEXT_PRIVATE_SIGNING_GCLOUD_HSM_PUBLIC_CRT_FILE_CONTENTS=
 # OPTIONAL: The path to the Google Cloud Credentials file to use for the gcloud-hsm signing transport.
 NEXT_PRIVATE_SIGNING_GCLOUD_APPLICATION_CREDENTIALS_CONTENTS=
+
+# Azure Key Vault HSM
+# OPTIONAL: Azure Key Vault URL for the azure-hsm signing transport (e.g., https://<vault-name>.vault.azure.net)
+NEXT_PRIVATE_SIGNING_AZURE_KEY_VAULT_URL=
+# OPTIONAL: Azure Key Vault key name for the azure-hsm signing transport
+NEXT_PRIVATE_SIGNING_AZURE_KEY_NAME=
+# OPTIONAL: Azure Key Vault certificate name for the azure-hsm signing transport
+NEXT_PRIVATE_SIGNING_AZURE_CERTIFICATE_NAME=
+# OPTIONAL: Azure Tenant ID for service principal authentication (if not using managed identity)
+NEXT_PRIVATE_SIGNING_AZURE_TENANT_ID=
+# OPTIONAL: Azure Client ID for service principal authentication (if not using managed identity)
+NEXT_PRIVATE_SIGNING_AZURE_CLIENT_ID=
+# OPTIONAL: Azure Client Secret for service principal authentication (if not using managed identity)
+NEXT_PRIVATE_SIGNING_AZURE_CLIENT_SECRET=
+# OPTIONAL: Local path to certificate file for azure-hsm signing transport (instead of fetching)
+NEXT_PRIVATE_SIGNING_AZURE_CERTIFICATE_PATH=
+# OPTIONAL: Base64-encoded certificate contents for azure-hsm signing transport (instead of fetching)
+NEXT_PRIVATE_SIGNING_AZURE_CERTIFICATE_CONTENTS=
 
 # [[STORAGE]]
 # OPTIONAL: Defines the storage transport to use. Available options: database (default) | s3
