--- a/packages/signing/package.json
+++ b/packages/signing/package.json
@@ -12,6 +12,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@azure/identity": "^4.0.0",
+    "@azure/keyvault-certificates": "^4.8.0",
+    "@azure/keyvault-keys": "^4.8.0",
     "@documenso/tsconfig": "*",
     "@documenso/pdf-sign": "^0.1.0",
     "pdf-lib": "^1.17.1",
