feat: add option to allow only admins to create organisations and teams

--- a/.env.example
+++ b/.env.example
@@ -126,6 +126,8 @@ NEXT_PUBLIC_POSTHOG_KEY=""
 NEXT_PUBLIC_FEATURE_BILLING_ENABLED=
 # OPTIONAL: Leave blank to allow users to signup through /signup page.
 NEXT_PUBLIC_DISABLE_SIGNUP=
+# OPTIONAL: Only allow admin accounts to create new organisations.
+NEXT_PUBLIC_ADMIN_CREATE_ORGANISATION="false"
 
 # [[E2E Tests]]
 E2E_TEST_AUTHENTICATE_USERNAME="Test User"
