feat: add option to not create personal orgnaisation

--- a/.env.example
+++ b/.env.example
@@ -154,6 +154,8 @@ NEXT_PUBLIC_POSTHOG_KEY=""
 NEXT_PUBLIC_FEATURE_BILLING_ENABLED=
 # OPTIONAL: Leave blank to allow users to signup through /signup page.
 NEXT_PUBLIC_DISABLE_SIGNUP=
+# OPTIONAL: Disable automatic creation of personal organisation for new users.
+NEXT_PUBLIC_DISABLE_PERSONAL_ORGANISATION="false"
 # OPTIONAL: Only allow admin accounts to create new organisations.
 NEXT_PUBLIC_ADMIN_CREATE_ORGANISATION="false"
 
